# Isogeometric-Analysis-with-Deal.II

./: README.md
References/step-41/: CMakeLists.txt
examples/01-Poisson/: README.md
examples/01-Poisson_HPK/: CMakeLists.txt  COMPILE.sh
examples/02-Poisson_extended/: README.md
examples/03-Elastic_plate/: step-8.cc
examples/04-Elastic_beam/: COMPILE.sh  README.md  beam.cc
examples/04-Elastic_beam_HPK/: CMakeLists.txt
examples/05-Elastic_membrane/: COMPILE.sh  README.md
obstacle/: CMakeLists.txt  COMPILE.sh  Changes_step-41.md  Info about the problem.txt  Matrices.ods  README.md  clean-all.sh
obstacle/include/: chrono.hpp  iga_handler.h
obstacle/source/: grid_generator.cc  iga_handler.cc  step-41.cc
original-step-41/: CMakeLists.txt  COMPILE.sh  main-step-41.cc
poisson/: CMakeLists.txt  COMPILE.sh  README poisson.md  README.md  clean-all.sh  poisson.cc
poisson/doc/: Doxyfile
references/step-4/: CMakeLists.txt  COMPILE.sh
references/step-41/: COMPILE.sh
references/step-8/: CMakeLists.txt  COMPILE.sh
step-04_IGA_(poisson)/: README.md  poisson.cc
step-05_IGA_(ext_poisson)/: CMakeLists.txt  COMPILE.sh  README.md  step-5.cc
step-4 IGA (poisson)/: README.md  poisson.cc
step-4 IGA (poisson)/doc/: log.txt
step-41 IGA (obstacle)/: README.md
step-41 IGA (obstacle)/include/: chrono.hpp  iga_handler.h
step-41_IGA_(obstacle)/: COMPILE.sh  README.md
step-5 IGA (ext. poisson)/: README.md
step-5 IGA (ext. poisson)/doc/: log.txt
step-8_IGA_(beam)/: CMakeLists.txt  beam.cc
step-8_IGA_(beam)/doc/: log.txt
step-8_IGA_(plate)/: step-8.cc
(+16 files in other folders)
